# sentiment_analyzer

./: .gitignore  README.md  pyproject.toml
data/: __init__.py
src/: analyzer.py  api.py  main.py  model.py  preprocessing.py  storage.py
src/sentiment_analyzer/: analyzer.py  api.py  cli.py  model.py  preprocessing.py  visualization.py
tests/: __init__.py  test_analyzer.py  test_model.py  test_preprocessing.py
