[tool.poetry]
name = "sentiment-analyzer"
version = "0.1.0"
description = "Sentiment analysis service with REST API and batch processing"
authors = ["deimoswi"]
readme = "README.md"

packages = [{ include = "sentiment_analyzer", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.0"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
